// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> with additional className matches its snapshot 1`] = `
<div
  className=
      y-box
      TEST_CLASSNAME
      {
        border-radius: 1px;
        border: 1px solid rgb(221,224,230);
      }
>
  <Block
    className=

        {
          margin-bottom: -1px;
          margin-left: -1px;
          margin-right: -1px;
          margin-top: -1px;
          position: relative;
        }
    padding="small"
  />
</div>
`;

exports[`<Box /> with children passed matches its snapshot 1`] = `
<div
  className=
      y-box
      {
        border-radius: 1px;
        border: 1px solid rgb(221,224,230);
      }
>
  <Block
    className=

        {
          margin-bottom: -1px;
          margin-left: -1px;
          margin-right: -1px;
          margin-top: -1px;
          position: relative;
        }
    padding="small"
  />
</div>
`;

exports[`<Box /> with default options matches its snapshot 1`] = `
<div
  className=
      y-box
      {
        border-radius: 1px;
        border: 1px solid rgb(221,224,230);
      }
>
  <Block
    className=

        {
          margin-bottom: -1px;
          margin-left: -1px;
          margin-right: -1px;
          margin-top: -1px;
          position: relative;
        }
    padding="small"
  />
</div>
`;
